fix(image-creator): image was not showing on main screen fixed

--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ main .content-right .image {
   height: 682px;
   width: 920px;
 
-  background-image: url("/assets/images/allstar.png");
+  background-image: url("../assets/images/allstar.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -258,7 +258,7 @@ main .content-right .footer .creator-role p:nth-child(1) {
     height: 520px;
     width: 795px;
 
-    background-image: url("/assets/images/allstar.png");
+    background-image: url("../assets/images/allstar.png");
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -320,7 +320,7 @@ main .content-right .footer .creator-role p:nth-child(1) {
     right: 2rem;
 
     background-color: transparent;
-    background-image: url("/assets/icons/icon-navbar.svg");
+    background-image: url("../assets/icons/icon-navbar.svg");
     background-repeat: no-repeat;
     width: 2rem;
     aspect-ratio: 1;
@@ -330,7 +330,7 @@ main .content-right .footer .creator-role p:nth-child(1) {
   }
 
   .mobile-nav-toggle[aria-expanded="true"] {
-    background-image: url("/assets/icons/icon-close.svg");
+    background-image: url("../assets/icons/icon-close.svg");
     background-repeat: no-repeat;
   }
 
